// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vcl object should have not removed the comment 1`] = `
"/* will not be removed */
body {
  color: blue
}
"
`;

exports[`vcl object should have removed the comment 1`] = `"body{color:#00f}"`;

exports[`vcl object should include local css files 1`] = `
"body {
  background: red;
}
a {
  color: green;
}"
`;

exports[`vcl object should include local sss files 1`] = `
"body {
  background: red;
}
a {
  color: green;
}"
`;

exports[`vcl object should override the default theme 1`] = `
".body {
  background-color: #FFFFFF
}

body {
  color: blue
}
"
`;

exports[`vcl object should return valid css 1`] = `
"body {
  color: blue
}"
`;

exports[`vcl object should return valid css without any options set 1`] = `
"body {
  color: rgba(204,204,204, .5)
}"
`;
